apps/alertmanager/overlay/korriban/istio-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
    - "alertmanager.home.cwbtech.net"
  gateways:
    - istio-system/public-gw
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: alertmanager.monitoring.svc.cluster.local
            port:
              number: 9093
      timeout: 30s
      retries:
        attempts: 3
        perTryTimeout: 10s
